# weather-station-esp32

./: CMakeLists.txt  PROGRESS.md  partitions.csv  sdkconfig.defaults  sdkconfig.mock  sdkconfig.production
components/board_config/: CMakeLists.txt  app_config.h  board.h
components/data_store/: CMakeLists.txt  data_store.h  data_store_mock.c  data_store_real.c  idf_component.yml
components/drv_bmp851/: CMakeLists.txt  bmp851.c  bmp851.h
components/drv_ili9341/: CMakeLists.txt  ili9341.c  ili9341.h
components/drv_ism330dhc/: CMakeLists.txt  ism330dhc.c  ism330dhc.h
components/drv_sen66/: CMakeLists.txt  sen66.c  sen66.h
components/hal_display/: CMakeLists.txt  hal_display.h  hal_display_mock.c  hal_display_real.c
components/hal_sensors/: CMakeLists.txt  hal_sensors.h  hal_sensors_mock.c  hal_sensors_real.c
components/net_mgr/: CMakeLists.txt  net_mgr.h  net_mgr_mock.c  net_mgr_real.c
components/ota_mgr/: CMakeLists.txt  ota_mgr.h  ota_mgr_mock.c  ota_mgr_real.c
components/ui/: CMakeLists.txt  idf_component.yml  ui.h  ui_mock.c  ui_real.c
components/web_server/: CMakeLists.txt  Kconfig  web_server.h  web_server_mock.c  web_server_real.c
main/: CMakeLists.txt  Kconfig.projbuild  button_task.c  button_task.h  debug_app.c  debug_app.h  events.c  events.h  main.c  production_app.c  production_app.h  sensor_task.c  sensor_task.h
